--- a/代码类/Android前端/YZEduStudentClient/app/build.gradle
+++ b/代码类/Android前端/YZEduStudentClient/app/build.gradle
@@ -27,6 +27,8 @@ dependencies {
 //    okhttp相关的库
     compile 'com.squareup.okhttp3:okhttp:3.6.0'
     compile 'com.squareup.okio:okio:1.11.0'
+//    bannerView
+    compile 'com.coldmoqiuli:banners:1.0.1'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
