--- a/代码类/Android前端/YZEduStudentClient/app/src/main/AndroidManifest.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/AndroidManifest.xml
@@ -20,6 +20,11 @@
         <activity android:name=".activity.MainActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustNothing"></activity>
+        <activity android:name=".activity.CourseClassificationActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustNothing"></activity>
+        <activity android:name=".activity.CourseIntroduce"
+            android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
