--- a/代码类/Android前端/YZEduStudentClient/app/build.gradle
+++ b/代码类/Android前端/YZEduStudentClient/app/build.gradle
@@ -29,6 +29,9 @@ dependencies {
     compile 'com.squareup.okio:okio:1.11.0'
 //    bannerView
     compile 'com.coldmoqiuli:banners:1.0.1'
+//    智能刷新的库
+    compile 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.1'
+    compile 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.1'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
