--- a/代码类/Android前端/YZEduStudentClient/app/src/main/AndroidManifest.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/AndroidManifest.xml
@@ -28,6 +28,8 @@
         <activity android:name=".activity.CourseSearchResultActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustNothing"></activity>
+        <activity android:name=".activity.CourseCfaResultActivity"
+            android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
