修改了学生端APP界面UI

--- a/代码类/Android前端/YZEduStudentClient/app/build.gradle
+++ b/代码类/Android前端/YZEduStudentClient/app/build.gradle
@@ -20,6 +20,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 //    qmui的库
@@ -32,6 +33,8 @@ dependencies {
 //    智能刷新的库
     compile 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.1'
     compile 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.1'
+//    卡片式布局的依赖
+    compile 'com.android.support:cardview-v7:26.1.0'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
