--- a/代码类/Android前端/YZEduStudentClient/app/build.gradle
+++ b/代码类/Android前端/YZEduStudentClient/app/build.gradle
@@ -19,24 +19,24 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-//    qmui的库
+    //    qmui的库
     compile 'com.qmuiteam:qmui:1.0.6'
-//    okhttp相关的库
+    //    okhttp相关的库
     compile 'com.squareup.okhttp3:okhttp:3.6.0'
     compile 'com.squareup.okio:okio:1.11.0'
-//    bannerView
+    //    bannerView
     compile 'com.coldmoqiuli:banners:1.0.1'
-//    智能刷新的库
+    //    智能刷新的库
     compile 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.1'
     compile 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.1'
-//    卡片式布局的依赖
+    //    卡片式布局的依赖
     compile 'com.android.support:cardview-v7:26.1.0'
-
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    implementation files('libs/jackson-all-1.9.2.jar')
 }
