修改了一些Android学生端的页面，修改了S3的文档

--- a/代码类/Android前端/YZEduStudentClient/app/src/main/AndroidManifest.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/AndroidManifest.xml
@@ -83,6 +83,15 @@
         <activity
             android:name=".activity.WebAboutActivity"
             android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".activity.CourseLearnActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".activity.CourseOverViewActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".activity.LessonLearnActivity"
+            android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
