--- a/代码类/Android前端/YZEduStudentClient/app/build.gradle
+++ b/代码类/Android前端/YZEduStudentClient/app/build.gradle
@@ -35,6 +35,10 @@ dependencies {
     compile 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.1'
     //    卡片式布局的依赖
     compile 'com.android.support:cardview-v7:26.1.0'
+    //    视频播放器依赖
+    compile 'fm.jiecao:jiecaovideoplayer:4.8.3'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
