--- a/代码类/Android前端/YZEduStudentClient/app/src/main/AndroidManifest.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/AndroidManifest.xml
@@ -49,7 +49,8 @@
             android:screenOrientation="portrait"></activity>
         <activity
             android:name=".activity.MyCourseActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustNothing"></activity>
         <activity
             android:name=".activity.MyPracticalActivity"
             android:screenOrientation="portrait"></activity>
@@ -91,7 +92,12 @@
             android:screenOrientation="portrait"></activity>
         <activity
             android:name=".activity.LessonLearnActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
             android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".activity.MaterialActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustNothing"></activity>
     </application>
 
 </manifest>
