--- a/代码类/Android前端/YZEduStudentClient/app/src/main/AndroidManifest.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/AndroidManifest.xml
@@ -59,7 +59,8 @@
             android:screenOrientation="portrait"></activity>
         <activity
             android:name=".activity.GradeQueryActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustNothing"></activity>
         <activity
             android:name=".activity.LearnLikeActivity"
             android:screenOrientation="portrait"></activity>
@@ -96,6 +97,11 @@
             android:screenOrientation="portrait"></activity>
         <activity
             android:name=".activity.MaterialActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustNothing"></activity>
+        <activity
+            android:name=".activity.LiveRoomActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustNothing"></activity>
     </application>
