完成了APP学生端主要的演示内容

--- a/代码类/Android前端/YZEduStudentClient/app/src/main/AndroidManifest.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/AndroidManifest.xml
@@ -103,7 +103,10 @@
             android:name=".activity.LiveRoomActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustNothing"></activity>
+            android:windowSoftInputMode="stateHidden"></activity>
+        <activity
+            android:name=".activity.ExamActivity"
+            android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
