--- a/代码类/Android前端/YZEduStudentClient/app/build.gradle
+++ b/代码类/Android前端/YZEduStudentClient/app/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     //    视频播放器依赖
     compile 'fm.jiecao:jiecaovideoplayer:4.8.3'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    //    九宫格布局
+    compile 'com.w4lle.library:NineLayout:1.0.0'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
