完成了APP学生端基本所有内容

--- a/代码类/Android前端/YZEduStudentClient/app/src/main/AndroidManifest.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/AndroidManifest.xml
@@ -114,6 +114,9 @@
         <activity
             android:name=".activity.DoPracticalActivity"
             android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".activity.CourseDisscussActivity"
+            android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
